--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.12.0",
     "mocha": "^5.1.0",
     "should": "^13.2.1"
   },
